# k-eval

./: .gitignore  .pre-commit-config.yaml  .release-please-manifest.json  AGENTS.md  CONTRIBUTING.md  README.md  release-please-config.json
src/k-eval/: CHANGELOG.md  MANIFEST.in  README.md  pyproject.toml
src/k-eval/agent/domain/: agent.py  factory.py  observer.py  result.py  usage.py
src/k-eval/agent/infrastructure/: claude_sdk.py  errors.py  factory.py  observer.py  registry.py
src/k-eval/cli/: main.py
src/k-eval/cli/output/: aggregator.py  eee.py
src/k-eval/config/domain/: agent.py  condition.py  condition_mcp_server.py  config.py  dataset.py  execution.py  judge.py  mcp_server.py  observer.py
src/k-eval/config/infrastructure/: errors.py  observer.py  yaml_loader.py
src/k-eval/core/: errors.py
src/k-eval/dataset/domain/: load_result.py  loader.py  observer.py  sample.py
src/k-eval/dataset/infrastructure/: errors.py  jsonl_loader.py  observer.py
src/k-eval/evaluation/application/: runner.py
src/k-eval/evaluation/domain/: observer.py  run.py  summary.py
src/k-eval/evaluation/infrastructure/: composite_observer.py  observer.py  progress_observer.py
src/k-eval/judge/domain/: factory.py  judge.py  observer.py  score.py
src/k-eval/judge/infrastructure/: errors.py  factory.py  litellm.py  observer.py
src/k-eval/k_eval/agent/domain/: agent.py  factory.py  observer.py  result.py  turn.py
src/k-eval/k_eval/agent/infrastructure/: claude_sdk.py  errors.py  factory.py  registry.py
src/k-eval/k_eval/cli/: main.py
src/k-eval/k_eval/cli/output/: aggregator.py  eee.py
src/k-eval/k_eval/cli/view/: command.py
src/k-eval/k_eval/config/domain/: agent.py  condition.py  condition_mcp_server.py  config.py  judge.py  mcp_server.py
src/k-eval/k_eval/config/infrastructure/: env_interpolation.py  errors.py  yaml_loader.py
src/k-eval/k_eval/dataset/domain/: load_result.py  loader.py  observer.py
src/k-eval/k_eval/dataset/infrastructure/: errors.py  jsonl_loader.py  observer.py
src/k-eval/k_eval/evaluation/application/: runner.py
src/k-eval/k_eval/evaluation/domain/: observer.py  run.py  summary.py
src/k-eval/k_eval/evaluation/infrastructure/: observer.py  (+2 more)
src/k-eval/k_eval/results/: kartograph-graph-context-eval_20260227_0a883e0c.detailed.jsonl  kartograph-graph-context-eval_20260227_0a883e0c.json
src/k-eval/k_eval/viewer/: viewer.html
src/k-eval/results/: kartograph-graph-context-eval_20260225_ca83991f.detailed.jsonl  kartograph-graph-context-eval_20260225_ca83991f.json
src/k-eval/tests/agent/: fake_agent.py  fake_factory.py  fake_observer.py
src/k-eval/tests/config/: fake_observer.py
src/k-eval/tests/core/: test_errors.py
src/k-eval/tests/dataset/: fake_observer.py
src/k-eval/tests/evaluation/: fake_dataset_loader.py  fake_observer.py
src/k-eval/tests/fixtures/: custom_keys_dataset.jsonl  env_var_config.yaml  high_temp_judge.yaml  invalid_condition_ref.yaml  invalid_json_dataset.jsonl  invalid_yaml.yaml  missing_key_dataset.jsonl  simple_dataset.jsonl  valid_config copy.yaml  valid_config.yaml
src/k-eval/tests/judge/: fake_factory.py  fake_judge.py  fake_observer.py
(+33 files in other folders)
