[project]
name = "k-eval"
version = "0.1.0"
description = "Context-aware evaluation framework for AI agents using MCP."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "claude-agent-sdk>=0.1.39",
    "pydantic>=2.12.5",
    "pyyaml>=6.0.3",
    "structlog>=25.5.0",
    "types-pyyaml>=6.0.12.20250915",
]

[dependency-groups]
dev = [
    "mypy>=1.19.1",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "types-pyyaml>=6.0.12.20250915",
]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.mypy]
python_version = "3.13"
strict = true
mypy_path = "."
