[project]
name = "k-eval"
version = "0.1.0"
description = "Context-aware evaluation framework for AI agents using MCP."
requires-python = ">=3.13"
dependencies = [
    "claude-agent-sdk>=0.1.39",
    "litellm",
    "pydantic>=2.12.5",
    "pyyaml>=6.0.3",
    "rich>=14.3.3",
    "structlog>=25.5.0",
    "typer>=0.24.1",
]

[project.scripts]
k-eval = "cli.main:app"

[project.optional-dependencies]
vertex_ai = ["google-cloud-aiplatform>=1.138.0"]
all = ["k-eval[vertex_ai]"]

[dependency-groups]
dev = [
    "mypy>=1.19.1",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "types-pyyaml>=6.0.12.20250915",
]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.ruff]
target-version = "py313"

[tool.mypy]
python_version = "3.13"
strict = true
mypy_path = "."
